fix message container height on mobile

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -425,6 +425,6 @@ body {
 
     .box.notifier.active {
         width: 30%;
-        height: 50%;
+        min-height: 50%;
     }
 }
